# Dug-PDF

./: .gitignore  Dockerfile  GenerateEmb.py  README.md  TextSplitter.py  pyproject.toml  test.py  test1.py
chroma_data/8f3cb030-5795-40de-a504-0c91a296164c/: index_metadata.pickle
langchain_intro/: chatbot.py  create_retriever.py
rag/: __init__.py
